<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.perrier.todomanager.ui.PageManager">

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_action_select_all"
        android:title="@string/action_menu_select_all"
        tools:ignore="HardcodedText,UnusedAttribute"/>

    <item
        android:id="@+id/action_delete_notes"
        android:icon="@drawable/ic_action_toolbar_delete"
        android:title="@string/action_menu_delete_selected"
        tools:ignore="HardcodedText,UnusedAttribute"/>

    <item
        android:id="@+id/ic_action_notes_transfer"
        android:icon="@drawable/ic_action_notes_transfer"
        android:title="@string/action_menu_notes_transfer"
        tools:ignore="HardcodedText,UnusedAttribute"/>

    <item
        android:id="@+id/action_export_evernote"
        android:icon="@drawable/edam_s"
        android:title="@string/action_mode_evernote"
        tools:ignore="HardcodedText,UnusedAttribute"/>

</menu>